refactor(electron): 从JCEF迁移到Electron桌面端实现
1.  移除JCEF相关依赖和旧桌面桥代码
2.  新增Electron项目结构和预加载脚本
3.  替换所有JCEF环境判断为Electron环境适配
4.  新增工作区API替代原桌面桥配置功能
5.  更新CSS和前端代码适配Electron窗口行为